--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/NekoChanTaiwan/nHentai-Enhanced.git"
   },
   "author": "NekoChan",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/NekoChanTaiwan/nHentai-Enhanced/issues"
   },
