--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "/src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack -w",
+    "prettier": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,11 @@
   },
   "homepage": "https://github.com/NekoChanTaiwan/nHentai-Enhanced",
   "devDependencies": {
-    "webpack": "^5.35.1",
-    "webpack-cli": "^4.6.0",
-    "webpack-userscript": "^2.5.7"
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "webpack-userscript": "^2.5.8"
+  },
+  "dependencies": {
+    "prettier": "^2.5.0"
   }
 }
